---------------------------------------------------------------------------------------------------
Version: 1.1.17
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.16
Date: 2025-01-12
  Changes:
    - New API PlanetsLib:update to update existing planets or space location prototypes. Passing an `orbit` field will also update the `distance` and `orientation` fields of the prototype.
---------------------------------------------------------------------------------------------------
Version: 1.1.15
Date: 2025-01-12
  Info:
    - Changelog fix.
---------------------------------------------------------------------------------------------------
Version: 1.1.14
Date: 2025-01-12
  Features:
    - Support for all combinations of `starmap_icon`, `starmap_icons` and `sprite_only`. Previously, if `sprite_only` was true, `starmap_icons` was never read and it was impossible to hide the sprite by setting both to nil.
---------------------------------------------------------------------------------------------------
Version: 1.1.13
Date: 2025-01-10
  Graphics:
    - Reinstated orbit images files in case people find them helpful.
    - Compressed the image files.
---------------------------------------------------------------------------------------------------
Version: 1.1.12
Date: 2025-01-03
  Locale:
    - Czech localization added.
---------------------------------------------------------------------------------------------------
Version: 1.1.11
Date: 2025-01-03
  Changes:
    - Switched API from PlanetsLib:planet_extend to PlanetsLib:extend.
---------------------------------------------------------------------------------------------------
Version: 1.1.10
Date: 2025-01-02
  Locale:
    - Adds translation into Russian.
---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: 2025-01-02
  Changes: